version <next>:
- Microsoft RLE video decoder
- Microsoft Video-1 decoder
- Apple Video (RPZA) decoder
- Cinepak decoder
- Sega FILM (CPK) file demuxer
- Westwood multimedia support (VQA/AUD file demuxer, audio decoder)

version 0.4.8:

- MPEG2 video encoding (Michael)
- Id RoQ playback subsystem (Mike Melanson and Tim Ferguson)
- Wing Commander III Movie (.mve) file playback subsystem (Mike Melanson
  and Mario Brito)
- Xan DPCM audio decoder (Mario Brito)
- Interplay MVE playback subsystem (Mike Melanson)
- Duck DK3 and DK4 ADPCM audio decoders (Mike Melanson)

version 0.4.7:

- RealAudio 1.0 (14_4) and 2.0 (28_8) native decoders. Author unknown, code from a mplayerhq
  (originally from public domain player for Amiga at http://www.honeypot.net/audio)
- Current version now also compiles with older GCC (Fabrice)
- 4X multimedia playback system including 4xm file demuxer (Mike
  Melanson), and 4X video and audio codecs (Michael)
- Creative YUV (CYUV) decoder (Mike Melanson)
- FFV1 codec (our very simple lossless intra only codec, compresses much better
  then huffyuv) (Michael)
- ASV1 (Asus), H.264, Intel indeo3 codecs has been added (Various)
- Tiny PNG encoder and decoder, tiny GIF decoder, PAM decoder (PPM with
  alpha support), JPEG YUV colorspace support. (Fabrice Bellard)
- ffplay has been replaced with a newer version which uses SDL (optionally)
  for multi platform support (fabrice)
- Sorenson Version 3 codec (SVQ3) support has been added (decoding only) - donated
  by anonymous
- AMR format has been added (Johannes Carlsson)
- 3gp support has been added (Johannes Carlsson)
- VP3 codec has been added (Mike Melanson)
- more MPEG-1/2 fixes
- Better Multi platform support, MS Visual Studio fixes (various)
- Altivec optimizations (Magnus Damn and others)
- SH4 processor support has been added (BERO)
- New public interfaces (avcodec_get_pix_fmt) (Roman Shaposhnick)
- VOB Streaming support (Brian Foley)
- Better MP3 Autodetection (Andriy Rysin)